# geoinsight

./: .copier-answers.resonant.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  Procfile  README.md  docker-compose.override.yml  docker-compose.yml  mkdocs.yml  package-lock.json  pyproject.toml  setup.py  tox.ini
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.github/workflows/: ci.yml  nightly_ci.yml  release.yml
dev/: .env.docker-compose  .env.docker-compose-native  django.Dockerfile  native-development.md
docs/: README.md  setup.md  testing.md
geoinsight/: __init__.py  asgi.py  urls.py
geoinsight/core/: admin.py  apps.py  notifications.py
geoinsight/core/management/commands/: ingest.py
geoinsight/core/migrations/: 0001_default_site.py  0001_models_redesign.py  0002_oauth_application.py  0002_vector_features.py  0003_nonunique_network_names.py  0004_files_and_networks.py  0005_projects.py  0006_alter_project_default_map_zoom.py  0007_delete_derivedregion.py  0008_curbs_aid_simulation.py  0009_file_size_field.py  0010_layers_and_frames.py  0011_analytics.py  0012_layer_styles.py  0013_task_results.py  0014_colormaps.py  0015_style_configs.py  0016_dataset_owner_and_tags.py  0017_basemaps.py  0018_merge.py  0019_merge.py  0020_color_config_use_feature_props.py
geoinsight/core/models/: __init__.py  basemap.py  basemaps.json  chart.py  colormap.py  data.py  dataset.py  file_item.py  layer.py  networks.py  project.py  querysets.py  regions.py  styles.py  task_result.py
geoinsight/core/rest/: __init__.py  access_control.py  analytics.py  basemap.py  basemaps.json  chart.py  colormap.py  data.py  dataset.py  explorer.py  file_item.py  layer.py  networks.py  project.py  regions.py  serializers.py
geoinsight/core/tasks/: chart.py  conversion.py  data.py  dataset.py  networks.py  regions.py
geoinsight/core/tasks/analytics/: __init__.py  analysis_type.py  create_road_network.py  flood_network_failure.py  flood_simulation.py  geoai_segmentation.py  network_recovery.py
geoinsight/core/tests/: conftest.py  factories.py  factory_fixtures.py  test_analytics.py  test_dataset.py  test_file_items.py  test_ingest.py  test_network.py  test_project.py  test_styles.py
geoinsight/settings/: base.py  development.py  heroku_production.py  production.py  testing.py
jupyter/: geodatalytics_data_exploration.ipynb  geodatalytics_explorer.py  geoinsight_data_exploration.ipynb  geoinsight_explorer.py
sample_data/: dc_metro.json  la_wildfires.json  multiframe_test.json
sample_data/boston_floods/: data.json  ingest_mbta.py
sample_data/new_york_energy/: data.json  export_networks.py  import_networks.py  ingest.py  interpret_network.py  nysdp.py
sample_data/testRasters/: sample.json
sample_data/tests/: analytics.json  ingest.json
scripts/sentinelDownload/: README.md  sentinel2Download.py
terraform/: .terraform.lock.hcl  django.tf  install_worker.sh  main.tf  update_worker.sh  www.tf
uvdat/: asgi.py  urls.py
uvdat/core/: access_control.py  admin.py  apps.py
uvdat/core/management/commands/: ingest.py
uvdat/core/migrations/: 0001_default_site.py  0001_models_redesign.py  0002_oauth_application.py  0005_projects.py  0008_curbs_aid_simulation.py  0010_layers_and_frames.py  0014_colormaps.py  0015_style_configs.py  0017_basemaps.py  0018_merge.py  0020_color_config_use_feature_props.py  0021_non_null_text_fields.py  0022_view_states.py  0022_views.py  0023_task_subscribers.py
uvdat/core/models/: __init__.py  chart.py  data.py  dataset.py  file_item.py  layer.py  querysets.py  regions.py  styles.py  task_result.py  view.py  view_state.py
uvdat/core/rest/: __init__.py  access_control.py  analytics.py  basemap.py  chart.py  colormap.py  data.py  dataset.py  explorer.py  file_item.py  layer.py  networks.py  project.py  regions.py  serializers.py  user.py  view.py  view_state.py
uvdat/core/tasks/: __init__.py  chart.py  conversion.py  data.py  dataset.py  networks.py  regions.py
uvdat/core/tasks/analytics/: __init__.py  analysis_type.py  create_road_network.py  flood_network_failure.py  flood_simulation.py  geoai_segmentation.py  network_recovery.py  uncertainty_quantification.py
uvdat/core/templates/uvdat/: email_task_complete.html  email_task_complete.txt
uvdat/core/tests/: conftest.py  factories.py  factory_fixtures.py  test_analytics.py  test_dataset.py  test_ingest.py  test_network.py  test_project.py  test_styles.py
uvdat/settings/: base.py  development.py  heroku_production.py
web/: .env.example  components.d.ts  env.d.ts  eslint.config.js  eslint.config.mjs  eslint.config.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.mts  vite.config.ts
web/src/: App.vue  main.ts  themes.ts  types.ts  vite-env.d.ts
web/src/api/: auth.js  auth.ts  rest.ts
web/src/components/: ControlsBar.vue  DatasetList.vue  DetailView.vue  RecursiveTable.vue  SliderNumericInput.vue
web/src/components/map/: LegacyMap.vue  Map.vue  MapTooltip.vue  ToggleCompareMap.vue
web/src/components/projects/: AccessControl.vue  DatasetSelect.vue  DatasetUpload.vue  ProjectConfig.vue
web/src/components/sidebars/: AnalyticsPanel.vue  ChartsPanel.vue  ColormapEditor.vue  ColormapPreview.vue  CompareLayerStyle.vue  DatasetsPanel.vue  FloatingPanel.vue  LayerStyle.vue  LayersPanel.vue  LegendPanel.vue  NetworksPanel.vue  NodeAnimation.vue  SideBars.vue
web/src/store/: analysis.ts  app.ts  compare.ts  conversion.ts  index.ts  layer.ts  map.ts  network.ts  panel.ts  project.ts  style.ts
