[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uvdat"
version = "1.30.2"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  # Runtime dependencies, always needed
  "celery",
  "channels-redis",
  "channels[daphne]",
  "django[argon2]",
  "django-allauth",
  "django-auth-style",
  "django-click",
  "django-cors-headers",
  "django-environ",
  "django-extensions",
  "django-filter",
  "django-guardian",
  "django-large-image",
  "django-oauth-toolkit",
  "django-resonant-settings[allauth,celery]",
  "django-resonant-utils[allauth,s3_storage]",
  "django-stubs-ext",
  "djangorestframework",
  "drf-yasg",
  # Needed for GeoDjango and "large-image[gdal]"
  # gdal 3.10 is the newest supported by Django: https://docs.djangoproject.com/en/5.2/ref/contrib/gis/install/geolibs/
  'gdal==3.10.*',
  "geopandas",
  "large-image-converter",
  "large-image[gdal]",
  "matplotlib", # for raster colormaps
  "networkx",
  "numpy",
  "pooch[progress]",
  "psycopg[binary,pool]",
  # Needed by "large-image-converter"
  "pylibtiff",
  "pyshp",
  "rasterio",
  "rich",
  "webcolors",
  "whitenoise[brotli]",
  # Production-only
  "django-s3-file-field[s3]",
  "django-storages[s3]",
  "sentry-sdk[celery,django,pure_eval]",
  "uvicorn",
  "websockets",
]

[project.optional-dependencies]
development = [
  # Runtime dependencies, only needed with "development" settings
  "daphne",
  "django-browser-reload",
  "django-debug-toolbar",
  "django-minio-storage",
  "django-resonant-utils[minio_storage]",
  "django-s3-file-field[minio]",
  "ipython",
  "watchdog",
  "werkzeug",
]
tasks = [
  "geoai-py",
  "osmnx",
  # Needed by "uvdat-flood-sim[large-image-writer]"
  "pyvips",
  "uvdat-flood-sim[large-image-writer]",
  "xdg-base-dirs",
]

[dependency-groups]
dev = [
  # Additional developer tools
  # The "dev" dependency group is installed by default,
  # so use this to install "development" extras by default too
  "uvdat[development]",
  "pre-commit",
  "tox",
  "tox-uv",
]
lint = [
  "ruff",
]
type = [
  "mypy",
  "celery-types",
  "django-stubs[compatible-mypy]",
  "djangorestframework-stubs",
  "pandas-stubs",
  "types-channels",
]
test = [
  "django-s3-file-field-client",
  "factory-boy",
  "pytest",
  "pytest-django",
  "pytest-mock",
  # Enable with "pytest --random-order ..."
  "pytest-random-order",
  # Enable with "pytest --count=... ..."
  "pytest-repeat",
]

[[tool.uv.index]]
name = "large_image_wheels"
url = "https://girder.github.io/large_image_wheels/"
explicit = true

[tool.uv.sources]
# These are only respected for top-level dependencies: https://github.com/astral-sh/uv/issues/8253
gdal = { index = "large_image_wheels" }
pylibtiff = { index = "large_image_wheels" }
pyvips = { index = "large_image_wheels" }

[tool.hatch.build]
only-include = [
  "uvdat",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Incompatible with formatter
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "COM812", # missing-trailing-comma
  "COM819", # prohibited-trailing-comma
  "D206", # docstring-tab-indentation
  "D300", # triple-single-quotes
  "E111", # indentation-with-invalid-multiple
  "E114", # indentation-with-invalid-multiple-comment
  "E117", # over-indented
  "ISC001", # single-line-implicit-string-concatenation
  "ISC002", # multi-line-implicit-string-concatenation
  "Q", # flake8-quotes
  "W191", # tab-indentation

  # Incompatible with Django
  "A003", # builtin-attribute-shadowing
  "ARG001", # unused-function-argument
  "ARG002", # unused-method-argument
  "RUF012", # mutable-class-default

  # Overly burdensome
  "ANN", # flake8-annotations
  "D1", # undocumented-*
  "EM", # flake8-errmsg
  "ERA001", # commented-out-code
  "FIX", # flake8-fixme
  "PLR2004", # magic-value-comparison
  "RET505", # superfluous-else-return
  "RET506", # superfluous-else-raise
  "RET507", # superfluous-else-continue
  "RET508", # superfluous-else-break
  "TD002", # missing-todo-author
  "TD003", # missing-todo-link
  "TRY003", # raise-vanilla-args

  # Project-specific
  "BLE001", # blind-except
  "C901", # complex-structure
  "PLC0415", # import-outside-top-level
  "PLR0912", # too-many-branches
  "PLR0913", # too-many-arguments
  "PLR0915", # too-many-statements
  "PLW2901", # redefined-loop-name
  "SLF001", # private-member-access
  "TRY301", # raise-within-try
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/**" = [
  "N806", # non-lowercase-variable-in-function
  "RUF012", # mutable-class-default
]
"**/settings/**" = [
  "F403", # undefined-local-with-import-star
  "F405", # undefined-local-with-import-star-usage
]
"**/settings/{development,testing}.py" = [
  "S105", # hardcoded-password-string
]
"**/tests/**" = [
  "DJ007", # django-all-with-model-form
  "DJ008", # django-model-without-dunder-str
  "INP001", # implicit-namespace-package
  "PLR0913", # too-many-arguments
  "S", # flake8-bandit
  "SLF001", # private-member-access
]
"{jupyter,sample_data}/**" = [
  "T201", # print
]

[tool.ruff.lint.flake8-boolean-trap]
extend-allowed-calls = ["pydantic.Field", "django.db.models.Value"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["ninja.Query"]

[tool.ruff.lint.flake8-self]
extend-ignore-names = ["_base_manager", "_default_manager",  "_meta"]

[tool.ruff.lint.isort]
# Sort by name, don't cluster "from" vs "import"
force-sort-within-sections = true
# Deferred annotations allows TC* rules to move more imports into TYPE_CHECKING blocks
required-imports = ["from __future__ import annotations"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder", "resonant-settings"]
sections = {"resonant-settings" = ["resonant_settings"] }

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
files = [
  "uvdat",
]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = [
  "mypy_django_plugin.main",
]

[tool.django-stubs]
django_settings_module = "uvdat.settings.testing"

[tool.pytest.ini_options]
addopts = [
  # Test utilities should be imported absolutely from the pythonpath,
  # so use the Pytest-recommended "importlib" mode
  "--import-mode=importlib",
  "--strict-config",
  "--strict-markers",
  "--showlocals",
  "--verbose",
  # Specifying as "--ds" will override any value in the environment
  "--ds=uvdat.settings.testing",
]
markers = [
    "slow: mark test as slow",
]
filterwarnings = [
  "error",
  # pytest often causes unclosed socket warnings
  'ignore:unclosed <socket\.socket:ResourceWarning',
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["web/package.json:version"]
build_command = """
uv lock --upgrade-package "$PACKAGE_NAME";
npm --prefix web/ install --package-lock-only --no-audit --no-fund;
git add uv.lock web/package-lock.json
"""
