[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "geodatalytics"
version = "1.35.1"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  # Runtime dependencies, always needed
  "celery==5.6.2",
  "channels-redis==4.3.0",
  "channels[daphne]==4.3.2",
  "django[argon2]==6.0.3",
  "django-allauth==65.15.0",
  "django-auth-style==0.15.0",
  "django-click==2.5.0",
  "django-cors-headers==4.9.0",
  "django-environ==0.13.0",
  "django-extensions==4.1",
  "django-filter==25.2",
  "django-guardian==3.3.0",
  "django-large-image==0.10.3",
  "django-oauth-toolkit==3.2.0",
  "django-resonant-settings[allauth,celery]==0.48.1",
  "django-resonant-utils[allauth,s3_storage]==0.19.0",
  "django-stubs-ext==5.2.9",
  "djangorestframework==3.17.0",
  "drf-yasg==1.21.15",
  # Needed for GeoDjango and "large-image[gdal]"
  'gdal==3.12.2.1',
  "geopandas==1.1.3",
  "large-image-converter==1.34.0",
  "large-image[gdal]==1.34.0",
  "matplotlib==3.10.8", # for raster colormaps
  "networkx==3.6.1",
  "numpy==2.4.3",
  "pooch[progress]==1.9.0",
  "psycopg[binary,pool]==3.3.3",
  # Needed by "large-image-converter"
  "pylibtiff==0.7.0.4.7.1",
  "pyshp==3.0.3",
  "rasterio==1.5.0",
  "rich==14.3.3",
  "webcolors==25.10.0",
  "whitenoise[brotli]==6.12.0",
  # Production-only
  "django-s3-file-field[s3]==1.1.0",
  "django-storages[s3]==1.14.6",
  "sentry-sdk[celery,django,pure_eval]==2.55.0",
  "uvicorn==0.42.0",
  "websockets==16.0",
]

[project.optional-dependencies]
development = [
  # Runtime dependencies, only needed with "development" settings
  "daphne==4.2.1",
  "django-browser-reload==1.21.0",
  "django-debug-toolbar==6.2.0",
  "django-minio-storage==0.5.9",
  "django-resonant-utils[minio_storage]==0.19.0",
  "django-s3-file-field[minio]==1.1.0",
  "ipython==9.11.0",
  "watchdog==6.0.0",
  "werkzeug==3.1.6",
]
tasks = [
  "geoai-py==0.35.0",
  "osmnx==2.1.0",
  # Needed by "uvdat-flood-sim[large-image-writer]"
  "pyvips==3.1.1.8.18.1",
  "uvdat-flood-sim[large-image-writer]==1.0.4",
  "xdg-base-dirs==6.0.2",
]

[dependency-groups]
dev = [
  # Additional developer tools
  # The "dev" dependency group is installed by default,
  # so use this to install "development" extras by default too
  "geodatalytics[development]",
  "pre-commit==4.5.1",
  "tox==4.50.3",
  "tox-uv==1.33.4",
]
lint = [
  "ruff==0.15.7",
]
type = [
  "mypy==1.19.1",
  "celery-types==0.26.0",
  "django-stubs[compatible-mypy]==5.2.9",
  "djangorestframework-stubs[compatible-mypy]==3.16.8",
  "pandas-stubs==3.0.0.260204",
  "types-channels==4.3.0.20250822",
]
test = [
  "django-s3-file-field-client==1.1.0",
  "factory-boy==3.3.3",
  "pytest==9.0.2",
  "pytest-django==4.12.0",
  "pytest-mock==3.15.1",
  # Enable with "pytest --random-order ..."
  "pytest-random-order==1.2.0",
  # Enable with "pytest --count=... ..."
  "pytest-repeat==0.9.4",
]

[[tool.uv.index]]
name = "large_image_wheels"
url = "https://girder.github.io/large_image_wheels/"
explicit = true

[tool.uv.sources]
# These are only respected for top-level dependencies: https://github.com/astral-sh/uv/issues/8253
gdal = { index = "large_image_wheels" }
pylibtiff = { index = "large_image_wheels" }
pyvips = { index = "large_image_wheels" }

[tool.hatch.build]
only-include = [
  "uvdat",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Incompatible with formatter
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "COM812", # missing-trailing-comma
  "COM819", # prohibited-trailing-comma
  "D206", # docstring-tab-indentation
  "D300", # triple-single-quotes
  "E111", # indentation-with-invalid-multiple
  "E114", # indentation-with-invalid-multiple-comment
  "E117", # over-indented
  "ISC001", # single-line-implicit-string-concatenation
  "ISC002", # multi-line-implicit-string-concatenation
  "Q", # flake8-quotes
  "W191", # tab-indentation

  # Incompatible with Django
  "A003", # builtin-attribute-shadowing
  "ARG001", # unused-function-argument
  "ARG002", # unused-method-argument
  "RUF012", # mutable-class-default

  # Overly burdensome
  "ANN", # flake8-annotations
  "D1", # undocumented-*
  "EM", # flake8-errmsg
  "ERA001", # commented-out-code
  "FIX", # flake8-fixme
  "PLR2004", # magic-value-comparison
  "RET505", # superfluous-else-return
  "RET506", # superfluous-else-raise
  "RET507", # superfluous-else-continue
  "RET508", # superfluous-else-break
  "TD002", # missing-todo-author
  "TD003", # missing-todo-link
  "TRY003", # raise-vanilla-args

  # Project-specific
]

[tool.ruff.lint.per-file-ignores]
"**/migrations/**" = [
  "N806", # non-lowercase-variable-in-function
  "RUF012", # mutable-class-default
]
"**/settings/**" = [
  "F403", # undefined-local-with-import-star
  "F405", # undefined-local-with-import-star-usage
]
"**/settings/{development,testing}.py" = [
  "S105", # hardcoded-password-string
]
"**/tests/**" = [
  "DJ007", # django-all-with-model-form
  "DJ008", # django-model-without-dunder-str
  "INP001", # implicit-namespace-package
  "PLR0913", # too-many-arguments
  "S", # flake8-bandit
  "SLF001", # private-member-access
]
"{jupyter,sample_data}/**" = [
  "T201", # print
]

[tool.ruff.lint.flake8-boolean-trap]
extend-allowed-calls = ["pydantic.Field", "django.db.models.Value"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["ninja.Query"]

[tool.ruff.lint.flake8-self]
extend-ignore-names = ["_base_manager", "_default_manager",  "_meta"]

[tool.ruff.lint.isort]
# Sort by name, don't cluster "from" vs "import"
force-sort-within-sections = true
# Deferred annotations allows TC* rules to move more imports into TYPE_CHECKING blocks
required-imports = ["from __future__ import annotations"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder", "resonant-settings"]
sections = {"resonant-settings" = ["resonant_settings"] }

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
files = [
  "uvdat",
]
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = [
  "mypy_django_plugin.main",
  "mypy_drf_plugin.main",
]

[tool.django-stubs]
django_settings_module = "uvdat.settings.testing"

[tool.pytest.ini_options]
addopts = [
  # Test utilities should be imported absolutely from the pythonpath,
  # so use the Pytest-recommended "importlib" mode
  "--import-mode=importlib",
  "--strict-config",
  "--strict-markers",
  "--showlocals",
  "--verbose",
  # Specifying as "--ds" will override any value in the environment
  "--ds=uvdat.settings.testing",
]
markers = [
    "slow: mark test as slow",
]
filterwarnings = [
  "error",
  # pytest often causes unclosed socket warnings
  'ignore:unclosed <socket\.socket:ResourceWarning',
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["web/package.json:version"]
build_command = """
uv lock --upgrade-package "$PACKAGE_NAME";
npm --prefix web/ install --package-lock-only --no-audit --no-fund;
git add uv.lock web/package-lock.json
"""
